--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,3 +1,4 @@
+<center>
 <div class="login">
   <div class="heading">
     <h2>Sign in</h2>
@@ -17,3 +18,4 @@
        </form>
  		</div>
  </div>
+</center>
