--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,16 +1,15 @@
-<h1>Hello world</h1>
-<form method="POST">
-    <div>
-        <label for="name">Name</label>
-        <input id="name" name="name">
-    </div>
-    <div>
-        <label for="email">Email</label>
-        <input id="email" name="email">
-    </div>
-    <div>
-        <label for="complain">Complain</label>
-        <textarea id="complain" name="complain" rows="10"></textarea>
-    </div>
-    <button type="submit">Send</button>
-</form>
+{% extends "base.html" %}
+{% block content %}
+    <h1>Hi, {{ user.username }}!</h1>
+{% endblock %}
+<!--<!doctype html>-->
+<!--<html>-->
+<!--    <head>-->
+<!--        <title>{{ title }} - Strona główna</title>-->
+<!--    </head>-->
+<!--    <body>-->
+<!--        <center>-->
+<!--        <h1>Hello, {{ user.username }}!</h1>-->
+<!--        </center>-->
+<!--    </body>-->
+<!--</html>-->
