--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -47,6 +47,17 @@
 </nav>
 
 
+{% with messages = get_flashed_messages(with_categories=true) %}
+  {% if messages %}
+
+    {% for category, message in messages %}
+        <div class="alert alert-{{category}}" role="alert">
+            {{message}}
+</div>
+    {% endfor %}
+
+  {% endif %}
+{% endwith %}
 
 
 {% block body %}
