--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -4,7 +4,10 @@
 {% block title %} Home {% endblock %}
 
 {% block body %}
-
+<div>&nbsp;</div>
+<div>&nbsp;</div>
+<div>&nbsp;</div>
+<div>&nbsp;</div>
 <div class="container">
     <center>
     <h1>Graciarnia</h1>
@@ -14,8 +17,14 @@
 
 
 </div>
-<div style="height: 500px;">&nbsp;
-
+<div>&nbsp;</div>
+<div>&nbsp;</div>
+<div>&nbsp;</div>
+<div>&nbsp;</div>
+<div>&nbsp;</div>
+<div>&nbsp;</div>
+<div>&nbsp;</div>
+<div>&nbsp;
 <center>
 <a href="/login"><button class="btn btn-success navbar-btn">Zaloguj</button> </a>
 <a href="/register"><button class="btn btn-success navbar-btn">Zarejestruj</button> </a>
