--- a/website/templates/register.html
+++ b/website/templates/register.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 
 {% block title %}Rejestracja{% endblock %}
-{% block content %}
+{% block body %}
+
+
 
 <form method="POST">
   <div class="mb-3">
