flask i formularz kontaktu

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -24,7 +24,7 @@
         <a class="nav-link" href="/">Strona główna <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Kontakt</a>
+        <a class="nav-link" href="/contactus">Kontakt</a>
       </li>
 
 
