--- a/website/templates/register.html
+++ b/website/templates/register.html
@@ -3,7 +3,7 @@
 {% block title %}Rejestracja{% endblock %}
 {% block body %}
 
-<form method="POST">
+<form method="POST" class="text-center card-body p-5 container">
   <div class="mb-3">
     <label for="name" class="form-label">Użytkownik</label><br>
     <input type="text" id="name" name="name" value="{{name}}" class="form-control" placeholder="Stwórz nazwę użytkownika" >
