--- a/website/templates/contact_form.html
+++ b/website/templates/contact_form.html
@@ -5,7 +5,7 @@
 {% block body %}
 
 <!--Section: Contact v.2-->
-<section class="mb-4">
+<section class="mb-3" class="text-center">
 
     <!--Section heading-->
     <h2 class="h1-responsive font-weight-bold text-center my-4">Problem?</h2>
@@ -15,7 +15,7 @@
     <div class="row">
 
         <!--Grid column-->
-        <div class="col-md-9 mb-md-0 mb-5">
+        <div class="col-md-9 mb-md-0 mb-5 text-center card-body p-5 container">
             <form id="contact-form" name="contact-form" method="POST"> <! --- TU jest metoda wysylania maili action="mail.php"--->
 
                 <!--Grid row-->
