flask dodawnie do bazy danych i kombinowanie z bootstrapem

--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -13,7 +13,7 @@
     </div>
   <div class="form-check">
     <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Wyloguj automatycznie</label>
+    <label class="form-check-label" for="exampleCheck1">Pozostań zalogowany</label>
   </div>
   <button type="submit" class="btn btn-success">Zaloguj</button>
   <button type="reset" class="btn btn-info">Wyczyść</button>
