--- a/website/templates/complain.html
+++ b/website/templates/complain.html
@@ -4,23 +4,23 @@
 {% block title %} Home {% endblock %}
 
 {% block body %}
+<center><h3>Complain</h3></center>
 
-<h3>Complain</h3>
 
 <form method="POST">
     {{ form.csrf_token }}
 
-    <div class="form-outline mb-4">
+    <div class="form-outline mb-3 text-center card-body p-5 container">
         {{ form.email(class="form-control form-control-lg") }}
         <label for="email" class="form-label">{{ form.email.label }}</label>
     </div>
 
-    <div class="form-outline mb-4">
+    <div class="form-outline mb-3 text-center card-body p-5 container">
         {{ form.complain(class="form-control form-control-lg") }}
         <label for="complain" class="form-label">{{ form.complain.label }}</label>
     </div>
 
-    <button type="submit" class="btn btn-success">Submit</button>
+    <button type="submit" class="btn btn-success center">Submit</button>
 </form>
 
 {% endblock %}
