--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -13,7 +13,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
 
-      <a class="navbar-brand" href="https://blirt.eu/">BLIRT S.A.</a>
+      <a class="navbar-brand" href="https://blirt.eu/"><img src="css/blirt-logo-top.png" alt="" width="287" height="45" class="d-inline-block align-text-top">
+          BLIRT S.A.</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -34,8 +35,8 @@
 
 
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Szukaj" aria-label="Search">
+    <form class="d-flex">
+      <input class="form-control me-2" type="search" placeholder="Szukaj" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Szukaj</button>
     </form>
   </div>
