bootstrap 5.0 i logo blirtu

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -13,7 +13,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
 
-      <a class="navbar-brand" href="https://blirt.eu/"><img src="css/blirt-logo-top.png" alt="" width="287" height="45" class="d-inline-block align-text-top">
+      <a class="navbar-brand" href="https://blirt.eu/"><img src="file:/home/sanczo/PycharmProjects/stronka/website/static/css/blirt-logo-top.png" alt="" width="287" height="45" class="d-inline-block align-text-top">
           BLIRT S.A.</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
