dodawanie do bazy, login i formularze

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -10,11 +10,11 @@
 <div>&nbsp;</div>
 <div class="container">
     <center>
-    <h1>Graciarnia</h1>
+    <h3>Graciarnia</h3>
 <h3>Program do obsługi magazynu odczynników i materiałów zużywalnych.</h3>
     <h3>BLIRT S.A./Kładki </h3>
 </center>
-
+Witaj {{ current_user.user_login }}
 
 </div>
 <div>&nbsp;</div>
