--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -3,14 +3,14 @@
 {% block body %}
 
 <form method="POST" class="text-center card-body p-5 container">
+    {{ form.csrf_token }}
     <div class="mb-3">
-    <label for="email" class="form-label">Email</label><br>
-    <input type="email" id="email" name="email" value="{{email}}" class="form-control" placeholder="Podaj firmowy adres email" >
+    <label for="email" class="form-label">{{ form.email.label }}</label><br>
+     {{ form.email(class="form-control form-control-lg", placeholder="Podaj firmowy adres email") }}
     </div>
     <div class="mb-3">
-    <label for="password1" class="form-label">Hasło</label><br>
-    <input type="password" id="password1" name="password1" value="{{password1}}" class="form-control" placeholder="Hasło musi mieć długość 6-12 znaków, zawierać co najmniej: 1 Wielką literę, 1 małą literę, jedną cyfrę i znak specjalny "$@#"" >
-    </div>
+    <label for="password" class="form-label">{{ form.password.label }}</label><br>
+    {{ form.password(class="form-control form-control-lg", placeholder="Podaj haslo") }}    </div>
   <div class="form-check">
     <input type="checkbox" class="form-check-input" id="exampleCheck1">
     <label class="form-check-label" for="exampleCheck1">Pozostań zalogowany</label>
