--- a/website/templates/register.html
+++ b/website/templates/register.html
@@ -4,22 +4,21 @@
 {% block body %}
 
 <form method="POST" class="text-center card-body p-5 container">
+  {{ form.csrf_token }}
   <div class="mb-3">
-    <label for="name" class="form-label">Użytkownik</label><br>
-    <input type="text" id="name" name="name" value="{{name}}" class="form-control" placeholder="Stwórz nazwę użytkownika" >
+    <label for="login" class="form-label">Użytkownik</label><br>
+     {{ form.login(class="form-control form-control-lg", placeholder="Podaj nazwe") }}
   </div>
   <div class="mb-3">
     <label for="email" class="form-label">Email</label><br>
-    <input type="email" id="email" name="email" value="{{email}}" class="form-control" placeholder="Podaj firmowy adres email" >
+    {{ form.email(class="form-control form-control-lg", placeholder="Podaj firmowy adres email") }}
   </div>
   <div class="mb-3">
     <label for="password1" class="form-label">Hasło</label><br>
-    <input type="password" id="password1" name="password1" value="{{password1}}" class="form-control" placeholder="Hasło musi mieć długość 6-12 znaków, zawierać co najmniej: 1 Wielką literę, 1 małą literę, jedną cyfrę i znak specjalny "$@#"" >
-  </div>
+ {{ form.password1(class="form-control form-control-lg", placeholder="Podaj firmowy adres email") }}  </div>
   <div class="mb-3">
     <label for="password1" class="form-label">Potwierdź hasło</label><br>
-    <input type="password" id="password2" name="password2" value="{{password2}}" class="form-control" placeholder="Hasło w tym polu musi być takie same jak w polu powyżej">
-  </div>
+ {{ form.password2(class="form-control form-control-lg", placeholder="Podaj firmowy adres email") }}  </div>
   <button type="submit" class="btn btn-success">Zarejestruj sie</button>
   <button type="reset" class="btn btn-info">Wyczyść</button>
 </form>
