--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -2,21 +2,60 @@
 {% block title %} Zaloguj się {% endblock %}
 {% block body %}
 
-<form method="POST" class="text-center card-body p-5 container">
-    {{ form.csrf_token }}
-    <div class="mb-3">
-    <label for="email" class="form-label">{{ form.email.label }}</label><br>
-     {{ form.email(class="form-control form-control-lg", placeholder="Podaj firmowy adres email") }}
-    </div>
-    <div class="mb-3">
-    <label for="password" class="form-label">{{ form.password.label }}</label><br>
-    {{ form.password(class="form-control form-control-lg", placeholder="Podaj haslo") }}    </div>
-  <div class="form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Pozostań zalogowany</label>
-  </div>
-  <button type="submit" class="btn btn-success">Zaloguj</button>
-  <button type="reset" class="btn btn-info">Wyczyść</button>
-</form>
+<section class="vh-100">
+		<div class="container fluid">
+			<div class="row justify-content-sm-center h-100">
+				<div class="col-xxl-4 col-xl-5 col-lg-5 col-md-7 col-sm-9">
+					<div class="text-center my-5">
+<!--						<img src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg" alt="logo" width="100">-->
+					</div>
+					<div class="card shadow-lg">
+						<div class="card-body p-5">
+							<h1 class="fs-4 card-title fw-bold mb-4">Zaloguj się</h1>
+							<form method="POST" class="needs-validation" novalidate="" autocomplete="off">
+								<div class="mb-3">
+									<label class="mb-2 text-muted" for="email">{{ form.email.label }}</label>
+									<input id="email" type="email" class="form-control" name="email" value="" required autofocus>
+									<div class="invalid-feedback">
+										Email jest nieprawidłowy
+									</div>
+								</div>
+
+								<div class="mb-3">
+									<div class="mb-2 w-100">
+										<label class="text-muted" for="password">{{ form.password.label }}</label>
+										<a href="forgot.html" class="float-end">
+											Zapomniałeś(aś) hasła?
+										</a>
+									</div>
+									<input id="password" type="password" class="form-control" name="password" required>
+								    <div class="invalid-feedback">
+								    	Hasło jest wymagane
+							    	</div>
+								</div>
+
+								<div class="d-flex align-items-center">
+									<div class="form-check">
+										<input type="checkbox" name="remember" id="remember" class="form-check-input">
+										<label for="remember" class="form-check-label">Zapamiętaj mnie</label>
+									</div>
+									<button type="submit" class="btn btn-primary ms-auto">
+										Zaloguj
+									</button>
+								</div>
+							</form>
+						</div>
+						<div class="card-footer py-3 border-0">
+							<div class="text-center">
+								Nie masz konta? <a href="register" class="text-dark">Zarejestruj się</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<script src="js/login.js"></script>
 
 {% endblock %}
