--- a/website/templates/contact_form.html
+++ b/website/templates/contact_form.html
@@ -71,7 +71,7 @@
             </form>
 
             <div class="text-center text-md-left">
-                <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
+                <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Wyślij</a>
             </div>
             <div class="status"></div>
         </div>
