--- a/website/templates/contact_form.html
+++ b/website/templates/contact_form.html
@@ -36,7 +36,7 @@
 
                                 <div class="mb-3">
                                     <label class="mb-2 text-muted" for="subject">{{ form.subject.label }}</label>
-                                    {{ form.email(class="form-control") }}
+                                    {{ form.subject(class="form-control") }}
 
                                 </div>
                         </div>
@@ -44,7 +44,8 @@
 
 
 								<div class="mb-3">
-                                <textarea class="form-control mb-3 textarea" type="text" id="message" name="message" rows="5"  placeholder="Wpisz swoją wiadomość"></textarea>
+									<textarea class="form-control mb-3 textarea" type="text" id="message" name="message" rows="5"  placeholder="Wpisz swoją wiadomość"></textarea>
+									{{ form.message(class="form-control") }}
                                 </div>
 
 								<div class="align-items-center d-flex">
