--- a/website/templates/reset.html
+++ b/website/templates/reset.html
@@ -15,7 +15,7 @@
 						<div class="card-body p-5">
 							<h1 class="fs-4 card-title fw-bold mb-4">Resetuj Hasło</h1>
 							<form method="POST" class="needs-validation" novalidate="" autocomplete="off">
-                                {{ form.csrf_token }}
+<!--                                {{ form.csrf_token }}-->
 								<div class="mb-3">
 									<label class="mb-2 text-muted" for="password">Nowe Hasło</label>
 <!--									<input id="password" type="password" class="form-control" name="password" value="" required autofocus>-->
