contactus inaczej zdefiniowane dane

--- a/website/templates/contact_form.html
+++ b/website/templates/contact_form.html
@@ -44,8 +44,8 @@
 
 
 								<div class="mb-3">
-									<textarea class="form-control mb-3 textarea" type="text" id="message" name="message" rows="5"  placeholder="Wpisz swoją wiadomość"></textarea>
-									{{ form.message(class="form-control") }}
+									<textarea class="form-control mb-3 textarea" type="text" id="message" name="message" rows="5"  placeholder="Wpisz swoją wiadomość">{{ form.message(class="form-control") }}</textarea>
+
                                 </div>
 
 								<div class="align-items-center d-flex">
