--- a/website/templates/contact_form.html
+++ b/website/templates/contact_form.html
@@ -9,7 +9,6 @@
 			<div class="row justify-content-sm-center h-100">
 				<div class="col-xxl-4 col-xl-5 col-lg-5 col-md-7 col-sm-9">
 					<div class="text-center my-5">
-<!--						<img src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg" alt="logo" width="100">-->
 					</div>
 					<div class="card shadow-lg">
 						<div class="card-body p-5">
@@ -37,23 +36,17 @@
                                 <div class="mb-3">
                                     <label class="mb-2 text-muted" for="subject">{{ form.subject.label }}</label>
                                     {{ form.subject(class="form-control") }}
-
                                 </div>
-                        </div>
-                    </div>
-
-
-								<div class="mb-3">
-									<textarea class="form-control mb-3 textarea" type="text" id="message" name="message" rows="5"  placeholder="Wpisz swoją wiadomość">{{ form.message(class="form-control") }}</textarea>
-
+                                <div class="mb-3">
+                                    <label class="mb-2 text-muted" for="message">{{ form.message.label }}</label>
+                                    <textarea class="form-control"  id="message" name="message" rows="5">{{ form.message(class="form-control") }}</textarea>
                                 </div>
-
-								<div class="align-items-center d-flex">
-									<button type="submit" class="btn btn-primary ms-auto">
-										Wyślij wiadomość
-									</button>
-								</div>
-							</form>
+                                <div class="align-items-center d-flex">
+                                    <button type="submit" class="btn btn-primary ms-auto">
+                                        Wyślij wiadomość
+                                    </button>
+                                </div>
+                            </form>
 						</div>
 						<div class="card-footer py-3 border-0">
 							<div class="text-center">
@@ -64,9 +57,9 @@
 				</div>
 			</div>
 		</div>
-	</section>
+</section>
 
-	<script src="js/login.js"></script>
+<script src="js/login.js"></script>
 
 
 {% endblock %}
