--- a/website/templates/forgot.html
+++ b/website/templates/forgot.html
@@ -15,7 +15,7 @@
 						<div class="card-body p-5">
 							<h1 class="fs-4 card-title fw-bold mb-4">Zapomniałeś(aś) hasło?</h1>
 							<form method="POST" class="needs-validation" novalidate="" autocomplete="off">
-<!--                                {{ form.csrf_token }}-->
+                                {{ form.csrf_token }}
 								<div class="mb-3">
 									<label class="mb-2 text-muted" for="email">{{ form.email.label }}</label>
 <!--									<input id="email" type="email" class="form-control" name="email" value="" required autofocus>-->
@@ -41,8 +41,8 @@
 				</div>
 			</div>
 		</div>
-	</section>
+</section>
 
-	<script src="js/login.js"></script>
+<script src="js/login.js"></script>
 
 {% endblock %}
