--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -47,7 +47,7 @@
 <tr>
     <td>{{user.user_email}}</td>
     <td>{{user.user_first_name}}</td>
-    <td>{{user.user_login_log}}</td>
+    <td>{{user.login_date}}</td>
 </tr>
 {% endfor %}
 </table>
